--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "moment": "^2.24.0",
     "node-schedule": "^1.3.2",
     "pg": "^7.11.0",
